--- a/style.css
+++ b/style.css
@@ -68,9 +68,34 @@ main {
 .header p {
     width: 35%;
     text-align: center;
-    color: var(--color-black);
+    color: black;
     margin-top: 20px;
     font-size: 16px;
+}
+
+
+/* FIRST PAGE */
+
+.n {
+    height: 80px;
+}
+
+.sortie p {
+    margin-top: 50px;
+    margin-left: 50px;
+}
+
+.sortie div {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+}
+
+.sortie div img {
+    height: 270px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 174px -57px rgba(0, 0, 0, 1);
 }
 
 
@@ -106,6 +131,7 @@ main {
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
+    padding-left: 12px;
 }
 
 .serie img {
@@ -114,7 +140,8 @@ main {
 }
 
 .serie p {
-    margin: 12px
+    margin-top: 12px;
+    margin-left: 12px;
 }
 
 .serie p span {
@@ -162,6 +189,11 @@ main {
     border-radius: 7px;
 }
 
+.text_input {
+    border: solid 1px #939393;
+    padding: 0 4px 0 4px;
+}
+
 .submit {
     justify-content: center;
     display: flex;
@@ -178,7 +210,7 @@ main {
     height: 40px;
     text-align: center;
     border-radius: 7px;
-    padding: 0 10px 2px 10px !important;
+    padding: 0 10px 0 10px !important;
 }
 
 .rechercher:hover {
@@ -187,19 +219,61 @@ main {
 }
 
 
+/* RETOUR */
+
+.retour {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.retour a {
+    text-decoration: none !important;
+    color: #939393;
+    border-radius: 7px;
+    border: solid 1px #939393;
+    background-color: transparent;
+    transition: 0.3s;
+    padding: 4px 10px 4px 10px;
+}
+
+.retour a:hover {
+    background-color: #939393;
+    color: white;
+}
+
+
 /* FOOTER */
 
 footer {
-    display: flex;
+    display: flex !important;
     justify-content: center;
     align-items: center;
     box-shadow: 0px -15px 80px rgba(0, 0, 0, 0.07);
     padding: 5px;
+    margin-top: 50px;
 }
 
 @media screen and (max-width: 480px) {
+    .header p {
+        width: 90%;
+        /* padding: 5px; */
+    }
     main {
-        padding-top: 100px;
+        padding-top: 140px;
+    }
+    .sortie p {
+        text-align: center;
+        margin: 0;
+        padding: 50px 0 25px 0;
+    }
+    .sortie div {
+        display: flex;
+        flex-direction: column;
+    }
+    .sortie div img {
+        margin-bottom: 15px;
     }
     #form {
         display: block;
@@ -207,5 +281,15 @@ footer {
     .form {
         margin-top: 50px;
         padding: 0 20px 0 20px;
+    }
+    .serie {
+        display: flex;
+        flex-direction: column;
+        height: 10% !important;
+        padding-top: 15px;
+    }
+    .serie p {
+        padding: 2px !important;
+        margin-left: 0;
     }
 }
