--- a/style.css
+++ b/style.css
@@ -85,6 +85,10 @@ main {
     margin-left: 50px;
 }
 
+.mobil {
+    display: none !important;
+}
+
 .sortie div {
     display: flex;
     justify-content: space-around;
@@ -266,6 +270,12 @@ footer {
         text-align: center;
         margin: 0;
         padding: 50px 0 25px 0;
+    }
+    .ordi {
+        display: none !important;
+    }
+    .mobil {
+        display: flex !important;
     }
     .sortie div {
         display: flex;
