--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ main {
 }
 
 .list {
-    width: 100vw;
+    width: 100%;
     min-height: 50vh;
     display: flex;
     flex-wrap: wrap;
@@ -123,11 +123,15 @@ main {
 
 .list div {
     max-width: 600px;
-    height: 300px;
+    height: 320px;
     border-radius: 15px;
     border: 1px solid #eee;
+    /* border: 1px solid rgba(0, 0, 0, 0.014); */
     flex: 1 1 600px;
     background-color: #eee;
+    /* background: rgba(0, 0, 0, 0.014); */
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    padding-right: 10px;
 }
 
 .serie {
@@ -139,7 +143,7 @@ main {
 }
 
 .serie img {
-    height: 270px;
+    height: 290px;
     border-radius: 15px;
 }
 
@@ -257,6 +261,13 @@ footer {
     box-shadow: 0px -15px 80px rgba(0, 0, 0, 0.07);
     padding: 5px;
     margin-top: 50px;
+}
+
+
+/* ADMIN */
+
+.photo {
+    height: 100px;
 }
 
 @media screen and (max-width:480px) {
