--- a/style.css
+++ b/style.css
@@ -123,14 +123,14 @@ main {
 
 .list div {
     max-width: 600px;
-    height: 320px;
+    height: 340px;
     border-radius: 15px;
-    border: 1px solid #eee;
-    /* border: 1px solid rgba(0, 0, 0, 0.014); */
+    /*border: 1px solid #eee;*/
+    border: 1px solid rgba(0, 0, 0, 0.014);
     flex: 1 1 600px;
-    background-color: #eee;
-    /* background: rgba(0, 0, 0, 0.014); */
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    /*background-color: #eee;*/
+    background: rgba(0, 0, 0, 0.014);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     padding-right: 10px;
 }
 
@@ -143,7 +143,7 @@ main {
 }
 
 .serie img {
-    height: 290px;
+    height: 310px;
     border-radius: 15px;
 }
 
@@ -266,8 +266,135 @@ footer {
 
 /* ADMIN */
 
+.admin_gestion {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.admin_gestion li {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+
+.rechercher_admin {
+    text-decoration: none !important;
+    color: red;
+    border-radius: 7px;
+    border: solid 1px red;
+    background-color: transparent;
+    transition: 0.3s;
+    padding: 4px 10px 4px 10px;
+}
+
+.rechercher_admin:hover {
+    background-color: red;
+    color: white;
+}
+
+.header p a {
+    color: #000;
+    width: 35%;
+    text-align: center;
+    margin-top: 20px;
+    font-size: 16px;
+}
+
+.add {
+    text-decoration: none !important;
+    color: #000;
+    border-radius: 7px;
+    border: solid 1px #000;
+    background-color: transparent;
+    transition: 0.3s;
+    padding: 4px 10px 4px 10px;
+}
+
+.add:hover {
+    background-color: #000;
+    color: white;
+}
+
+table {
+    border-collapse: collapse;
+    min-width: 400px;
+    width: auto;
+    box-shadow: 0 5px 50px rgba(0, 0, 0, .15);
+    margin: 100px auto;
+    border: 2px solid #ddd;
+}
+
+thead tr {
+    background-color: #141414;
+    color: #fff;
+    text-align: center;
+}
+
+th,
+td {
+    padding: 15px 20px;
+}
+
+tbody tr,
+td,
+th {
+    border: 1px solid #ddd;
+}
+
+
+/* tbody tr:nth-child(event) {
+    background-color: #f3f3f3;
+} */
+
+tbody tr:last-of-type {
+    border-bottom: 2px solid #141414;
+}
+
 .photo {
     height: 100px;
+}
+
+.add_serie {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.input {
+    width: 313.333px;
+    border: solid 1px #939393;
+    border-radius: 7px;
+    padding: 0 4px 0 4px;
+}
+
+.form_serie {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.ajouter {
+    text-decoration: none;
+    border: solid 1px red;
+    background-color: transparent;
+    transition: 0.3s;
+    color: red;
+    height: 40px;
+    text-align: center;
+    border-radius: 7px;
+    padding: 0 10px 0 10px !important;
+}
+
+.ajouter:hover {
+    background-color: red !important;
+    color: #fff !important;
 }
 
 @media screen and (max-width:480px) {
