--- a/style.css
+++ b/style.css
@@ -1,450 +1,1 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Poppins, sans-serif;
-}
-
-body {
-    overflow-x: hidden;
-}
-
-header {
-    box-shadow: 0 0 80px rgba(0, 0, 0, 0.07) !important;
-}
-
-
-/* NAVBAR */
-
-nav {
-    box-shadow: 0 0 80px rgba(0, 0, 0, 0.07) !important;
-}
-
-nav ul {
-    display: flex !important;
-    list-style: none !important;
-    justify-content: center !important;
-    align-items: center !important;
-    gap: 30px !important;
-}
-
-nav ul li {
-    font-size: 18px !important;
-    transition: all .3s !important;
-}
-
-nav ul li:hover {
-    transform: translateY(-3px) !important;
-}
-
-nav ul li:active {
-    text-underline-offset: 3px !important;
-}
-
-.nav-link {
-    color: #141414 !important;
-}
-
-main {
-    width: 98vw !important;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    padding-top: 175px;
-}
-
-.header {
-    width: 98vw !important;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.header h1 {
-    font-size: 60px;
-    text-align: center;
-}
-
-.header p {
-    width: 35%;
-    text-align: center;
-    color: #000;
-    margin-top: 20px;
-    font-size: 16px;
-}
-
-
-/* FIRST PAGE */
-
-.n {
-    height: 80px;
-}
-
-.sortie p {
-    margin-top: 50px;
-    margin-left: 50px;
-}
-
-.mobil {
-    display: none !important;
-}
-
-.sortie div {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px;
-}
-
-.sortie div img {
-    height: 270px;
-    border-radius: 15px;
-    box-shadow: 0 0 174px -57px rgba(0, 0, 0, 1);
-}
-
-
-/* CATALOGUE */
-
-.conteneur {
-    width: 100%;
-    min-height: 60vh;
-    padding-top: 50px;
-}
-
-.list {
-    width: 100%;
-    min-height: 50vh;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 40px;
-    padding: 30px 30px;
-    justify-content: space-evenly;
-}
-
-.list>.serie {
-    max-width: 600px;
-    height: 340px;
-    border-radius: 15px;
-    /*border: 1px solid #eee;*/
-    border: 1px solid rgba(0, 0, 0, 0.014);
-    flex: 1 1 600px;
-    /*background-color: #eee;*/
-    background: rgba(0, 0, 0, 0.014);
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-    padding-right: 10px;
-}
-
-.serie {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-left: 12px;
-}
-
-.serie img {
-    height: 310px;
-    border-radius: 15px;
-}
-
-.serie p {
-    margin-top: 12px;
-    margin-left: 12px;
-}
-
-.serie p span {
-    font-weight: 600;
-}
-
-
-/* RECHERCHES */
-
-#form {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 70px;
-}
-
-.form {
-    display: flex !important;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-
-.form p {
-    text-align: center;
-}
-
-.label {
-    display: flex;
-    justify-content: center;
-}
-
-.label_input {
-    transition: all 0.3s;
-    margin-top: 10px;
-    text-align: center;
-}
-
-.label_input:hover {
-    transform: translateY(-3px);
-}
-
-.label_input input {
-    border-radius: 7px;
-}
-
-.text_input {
-    border: solid 1px #939393;
-    padding: 0 4px 0 4px;
-}
-
-.submit {
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    margin-top: 15px;
-}
-
-.rechercher {
-    text-decoration: none;
-    border: solid 1px red;
-    background-color: transparent;
-    transition: 0.3s;
-    color: red;
-    height: 40px;
-    text-align: center;
-    border-radius: 7px;
-    padding: 0 10px 0 10px !important;
-}
-
-.rechercher:hover {
-    background-color: red !important;
-    color: #fff !important;
-}
-
-.resultrecherche {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100vw;
-}
-
-
-/* RETOUR */
-
-.retour {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-}
-
-.retour a {
-    text-decoration: none !important;
-    color: #707070;
-    border-radius: 7px;
-    border: solid 1px #707070;
-    background-color: transparent;
-    transition: 0.3s;
-    padding: 4px 10px 4px 10px;
-}
-
-.retour a:hover {
-    background-color: #707070;
-    color: white;
-}
-
-
-/* FOOTER */
-
-footer {
-    display: flex !important;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px -15px 80px rgba(0, 0, 0, 0.07);
-    padding: 5px;
-    margin-top: 50px;
-}
-
-
-/* ADMIN */
-
-.admin_gestion {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.admin_gestion li {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 100px;
-    margin-bottom: 50px;
-}
-
-.rechercher_admin {
-    text-decoration: none !important;
-    color: red;
-    border-radius: 7px;
-    border: solid 1px red;
-    background-color: transparent;
-    transition: 0.3s;
-    padding: 4px 10px 4px 10px;
-}
-
-.rechercher_admin:hover {
-    background-color: red;
-    color: white;
-}
-
-.header p a {
-    color: #000;
-    width: 35%;
-    text-align: center;
-    margin-top: 20px;
-    font-size: 16px;
-}
-
-.add {
-    text-decoration: none !important;
-    color: #000;
-    border-radius: 7px;
-    border: solid 1px #000;
-    background-color: transparent;
-    transition: 0.3s;
-    padding: 4px 10px 4px 10px;
-}
-
-.add:hover {
-    background-color: #000;
-    color: white;
-}
-
-table {
-    border-collapse: collapse;
-    min-width: 400px;
-    width: auto;
-    box-shadow: 0 5px 50px rgba(0, 0, 0, .15);
-    margin: 100px auto;
-    border: 2px solid #ddd;
-}
-
-thead tr {
-    background-color: #141414;
-    color: #fff;
-    text-align: center;
-}
-
-th,
-td {
-    padding: 15px 20px;
-}
-
-tbody tr,
-td,
-th {
-    border: 1px solid #ddd;
-}
-
-
-/* tbody tr:nth-child(event) {
-    background-color: #f3f3f3;
-} */
-
-tbody tr:last-of-type {
-    border-bottom: 2px solid #141414;
-}
-
-.photo {
-    height: 100px;
-}
-
-.add_serie {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.input {
-    width: 313.333px;
-    border: solid 1px #939393;
-    border-radius: 7px;
-    padding: 0 4px 0 4px;
-}
-
-.form_serie {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-bottom: 10px;
-}
-
-.ajouter {
-    text-decoration: none;
-    border: solid 1px red;
-    background-color: transparent;
-    transition: 0.3s;
-    color: red;
-    height: 40px;
-    text-align: center;
-    border-radius: 7px;
-    padding: 0 10px 0 10px !important;
-}
-
-.ajouter:hover {
-    background-color: red !important;
-    color: #fff !important;
-}
-
-@media screen and (max-width:480px) {
-    .header p {
-        width: 90%;
-    }
-    main {
-        padding-top: 140px;
-    }
-    .sortie p {
-        text-align: center;
-        margin: 0;
-        padding: 50px 0 25px 0;
-    }
-    .ordi {
-        display: none !important;
-    }
-    .mobil {
-        display: flex !important;
-    }
-    .sortie div {
-        display: flex;
-        flex-direction: column;
-    }
-    .sortie div img {
-        margin-bottom: 15px;
-    }
-    #form {
-        display: block;
-    }
-    .form {
-        margin-top: 50px;
-        padding: 0 20px 0 20px;
-    }
-    .serie {
-        display: flex;
-        flex-direction: column;
-        height: 10% !important;
-        padding-top: 15px;
-    }
-    .serie p {
-        padding: 2px !important;
-        margin-left: 0;
-    }
-}
+*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins,sans-serif}body{overflow-x:hidden}header{box-shadow:0 0 80px rgba(0,0,0,.07)!important}nav{box-shadow:0 0 80px rgba(0,0,0,.07)!important}nav ul{display:flex!important;list-style:none!important;justify-content:center!important;align-items:center!important;gap:30px!important}nav ul li{font-size:18px!important;transition:all .3s!important}nav ul li:hover{transform:translateY(-3px)!important}nav ul li:active{text-underline-offset:3px!important}.nav-link{color:#141414!important}main{width:98vw!important;min-height:100vh;display:flex;flex-direction:column;padding-top:175px}.header{width:98vw!important;display:flex;flex-direction:column;align-items:center}.header h1{font-size:60px;text-align:center}.header p{width:35%;text-align:center;color:#000;margin-top:20px;font-size:16px}.n{height:80px}.sortie p{margin-top:50px;margin-left:50px}.mobil{display:none!important}.sortie div{display:flex;justify-content:space-around;align-items:center;padding:20px}.sortie div img{height:270px;border-radius:15px;box-shadow:0 0 174px -57px rgba(0,0,0,1)}.conteneur{width:100%;min-height:60vh;padding-top:50px}.list{width:100%;min-height:50vh;display:flex;flex-wrap:wrap;gap:40px;padding:30px 30px;justify-content:space-evenly}.list>.serie{max-width:600px;height:340px;border-radius:15px;border:1px solid rgba(0,0,0,.014);flex:1 1 600px;background:rgba(0,0,0,.014);box-shadow:0 0 10px rgba(0,0,0,.2);padding-right:10px}.serie{display:flex;align-items:center;flex-direction:row;justify-content:space-between;padding-left:12px}.serie img{height:310px;border-radius:15px}.serie p{margin-top:12px;margin-left:12px}.serie p span{font-weight:600}#form{display:flex;flex-direction:row;justify-content:space-around;align-items:center;margin-top:70px}.form{display:flex!important;justify-content:center;flex-direction:column;align-items:center}.form p{text-align:center}.label{display:flex;justify-content:center}.label_input{transition:all 0.3s;margin-top:10px;text-align:center}.label_input:hover{transform:translateY(-3px)}.label_input input{border-radius:7px}.text_input{border:solid 1px #939393;padding:0 4px 0 4px}.submit{justify-content:center;display:flex;align-items:center;margin-top:15px}.rechercher{text-decoration:none;border:solid 1px red;background-color:transparent;transition:0.3s;color:red;height:40px;text-align:center;border-radius:7px;padding:0 10px 0 10px!important}.rechercher:hover{background-color:red!important;color:#fff!important}.resultrecherche{display:flex;justify-content:center;align-items:center;flex-direction:column;width:100vw}.retour{display:flex;justify-content:center;align-items:center;margin-top:50px}.retour a{text-decoration:none!important;color:#707070;border-radius:7px;border:solid 1px #707070;background-color:transparent;transition:0.3s;padding:4px 10px 4px 10px}.retour a:hover{background-color:#707070;color:#fff}footer{display:flex!important;justify-content:center;align-items:center;box-shadow:0 -15px 80px rgba(0,0,0,.07);padding:5px;margin-top:50px}.admin_gestion{display:flex;justify-content:space-evenly;align-items:center}.admin_gestion li{display:flex;flex-direction:column;justify-content:center;align-items:center;margin-top:100px;margin-bottom:50px}.rechercher_admin{text-decoration:none!important;color:red;border-radius:7px;border:solid 1px red;background-color:transparent;transition:0.3s;padding:4px 10px 4px 10px}.rechercher_admin:hover{background-color:red;color:#fff}.header p a{color:#000;width:35%;text-align:center;margin-top:20px;font-size:16px}.add{text-decoration:none!important;color:#000;border-radius:7px;border:solid 1px #000;background-color:transparent;transition:0.3s;padding:4px 10px 4px 10px}.add:hover{background-color:#000;color:#fff}table{border-collapse:collapse;min-width:400px;width:auto;box-shadow:0 5px 50px rgba(0,0,0,.15);margin:100px auto;border:2px solid #ddd}thead tr{background-color:#141414;color:#fff;text-align:center}th,td{padding:15px 20px}tbody tr,td,th{border:1px solid #ddd}tbody tr:nth-child(even){background-color:#f3f3f3}tbody tr:last-of-type{border-bottom:2px solid #141414}.suppr{color:rgb(243,31,31)}.suppr:hover{color:rgb(212,27,27);text-decoration:underline}.photo{height:100px}.add_serie{display:flex;flex-direction:column;justify-content:center;align-items:center}.input{width:313.333px;border:solid 1px #939393;border-radius:7px;padding:0 4px 0 4px}.form_serie{display:flex;justify-content:center;align-items:center;flex-direction:column;margin-bottom:10px}.ajouter{text-decoration:none;border:solid 1px red;background-color:transparent;transition:0.3s;color:red;height:40px;text-align:center;border-radius:7px;padding:0 10px 0 10px!important}.ajouter:hover{background-color:red!important;color:#fff!important}@media screen and (max-width:480px){.header p{width:90%}main{padding-top:140px}.sortie p{text-align:center;margin:0;padding:50px 0 25px 0}.ordi{display:none!important}.mobil{display:flex!important}.sortie div{display:flex;flex-direction:column}.sortie div img{margin-bottom:15px}#form{display:block}.form{margin-top:50px;padding:0 20px 0 20px}.serie{display:flex;flex-direction:column;height:10%!important;padding-top:15px}.serie p{padding:2px!important;margin-left:0}}
